@@ -3,6 +3,7 @@
 = 2.6.1 =
 * Improved the useability of group and capability selection dropdowns.
 * Fixed clash between group filter and group action on Users admin screen.
+* Added an option to filter the Users screen to match users who belong to all chosen groups.
 
 = 2.6.0 =
 * Tested for WordPress 5.1.
